[package]
name = "bulletin-board-demo"
version = "0.1.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1"
actix-files = "0.5"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
sha2 = "0.9"
anyhow = "1.0"
hex = "0.4"
itertools = "0.10"
csv = "1.1"
async-std = "1.9"