[package]
name = "bulletin-board-demo"
version = "0.2.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
lazy_static = "1.4"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.9"
merkle-tree-bulletin-board = { path = "../merkle-tree-bulletin-board" }
anyhow = "1.0"


