[package]
name = "merkle-tree-bulletin-board-backend-mysql"
version = "0.2.0"
edition = "2021"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
description = "A mysql backend for merkle-tree-bulletin-board."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RightToAskOrg/bulletin-board"
repository = "https://github.com/RightToAskOrg/bulletin-board"
readme = "README.md"
keywords = ["Merkle", "bulletin", "verifiable", "board","merkle-tree"]
categories = ["cryptography", "data-structures"]

[dependencies]
merkle-tree-bulletin-board = "0.1"
anyhow = "1.0"
mysql = "23"
