[package]
name = "merkle-tree-bulletin-board"
version = "0.1.0"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
edition = "2018"
description = "A public bulletin board based upon Merkle trees."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
csv = "1.1"
itertools = "0.10"
anyhow = "1.0"
hex = "0.4"